KubceCourse/hostPath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath
spec:
  containers:
    - name: centos
      image: centos:7
      command: ["sleep", "36000"]
      volumeMounts:
        - mountPath: /cache
          name: example-volume
  volumes:
    - name: example-volume
      hostPath:
        path: /testVolume
