KubceCourse/storage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
    containers:
      - image: centos:7
        name: test-container
        command: ["sleep", "36000"]
        volumeMounts:
          - mountPath: /cache
            name: cache-volume
  volumes:
    - name: cache-volume
      emptyDir:
        sizeLimit: 500Mi
