KubceCourse/ingress.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-base
  labels:
    appName: nginx
    demoFor: ingress
spec:
  containers:
    - name: nginx
      image: nginx:1.19
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: httpd-base
  labels:
    appName: httpd
    demoFor: ingress
spec:
  containers:
    - name: httpd
      image: httpd
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-base
spec:
  selector:
    appName: nginx
    demoFor: ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-base
spec:
  selector:
    appName: httpd
    demoFor: ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-base
spec:
  ingressClassName: nginx
  rules:
    - host: httpd.cloudaws.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpd-base
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-base
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.cloudaws.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-base
                port:
                  number: 80
